[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://firstPage/firstPage.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "user_confirm"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="FirstPage" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.5
margin_top = 100.0
margin_right = 178.5
margin_bottom = 178.0
custom_fonts/font = SubResource( 1 )
text = "Trivial War"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -10.0
margin_right = 125.5
margin_bottom = 74.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "START"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
